welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:5: error: ')' expected but 'if' found.
  if ((outsidemode==true)&&(n>=1)&&(n<=10)){
  ^in1To10:8: error: ';' expected but 'return' found.
  return true
  ^