welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
  if ((outsidemode==false)&&(n<1||n>10){
    return false
  } 
  if ((outsidemode==true)&&(n>=1)&&(n<=10)){
    return false
  }
  return true
      }